--- a/new.html
+++ b/new.html
@@ -10,7 +10,7 @@
     <div class="content">
       <div class="text">
         <p>
-          My Dear Fite Fairy💖,
+          My Dear Fire Fairy🥀,
           <br />
           Ya, I Know We Are Not Together Right Now But I Just Want To Say That Distance Can't Change My Feelings For You. I Love You So Much. I Miss You A Lot. I Miss Your Smile, Your Voice, Your Laugh, Your Everything. I Miss You So Much. I Can't Wait To See You Again. If I Were Near You, I Might Have Given You Chocolates. But Its Not Possible (God's Plan). So, I'm Sending You This Web Page. I Hope You Like It. (I Know You Will Like It)
         </p>
